--- a/SmartMask/app/build.gradle
+++ b/SmartMask/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     //DEPENDENCIAS DE VOLLEY
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    //DEPENDENCIAS PARA LAS GRAFICAS
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
