--- a/SmartMask/app/src/main/AndroidManifest.xml
+++ b/SmartMask/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartMask">
-        <activity android:name=".Options"></activity>
+        <activity android:name=".Profile1"></activity>
+        <activity android:name=".Options" />
         <activity android:name=".Settings" />
-        <activity android:name=".Profile" />
         <activity android:name=".Menu" />
         <activity android:name=".ConfigureValues" />
         <activity android:name=".ModalInformation" />
