--- a/SmartMask/app/build.gradle
+++ b/SmartMask/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     //DEPENDENCIAS DE VOLLEY
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    //DEPENDENCIAS DE LAS GRAFICAS
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
 }
