Real-time graphic
Real-time graphic

--- a/SmartMask/app/build.gradle
+++ b/SmartMask/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
     //DEPENDENCIAS DE LAS GRAFICAS
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 
 
 
