listar mascarilla funcional
listar mascarilla funcional

--- a/SmartMask/app/src/main/AndroidManifest.xml
+++ b/SmartMask/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             android:name=".DeleteMask"
             android:exported="true" />
         <activity android:name=".AirQualityTable" />
+        <activity android:name=".ListMaskActivity" />
         <activity android:name=".AirQuiality" />
         <activity android:name=".Profile1" />
         <activity android:name=".Options" />
