--- a/SmartMask/app/build.gradle
+++ b/SmartMask/app/build.gradle
@@ -44,7 +44,9 @@ dependencies {
     //DEPENDENCIAS DE LAS GRAFICAS
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 
-
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
