--- a/SmartMask/app/src/main/AndroidManifest.xml
+++ b/SmartMask/app/src/main/AndroidManifest.xml
@@ -8,13 +8,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.SmartMask">
         <activity
-            android:name=".DeleteMask"
+            android:name=".AddMask"
             android:exported="true" />
         <activity android:name=".AirQualityTable" />
         <activity android:name=".ListMaskActivity" />
